Added more information